--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,232 +1,1 @@
-<div class="container-fluid">
-  <div class="row my-5">
-    <div class="col-8 offset-2">
-      <p
-        class="text-light display-4"
-        style="
-          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
-            sans-serif;
-        "
-      >
-        Online Test Assesment
-      </p>
-        <div class="card card-6 row">
-          <div class="card-body col-12">
-            <!-- Form Start -->
-
-            <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
-              <!-- Full Name Property -->
-
-              <div class="form-group m-5">
-                <div class="row">
-                  <div class="col-3">
-                    <h4
-                      class="text-dark mt-1"
-                      style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
-                      Full name<span style="color: green">*</span>
-                    </h4>
-                  </div>
-                  <div class="col-9">
-                    <input
-                      class="form-control"
-                      style="width: 100%"
-                      type="text"
-                      name="full_name"
-                      placeholder="Firstname Lastname"
-                      formControlName="name"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col offset-3">
-                    <div
-                      *ngIf="form.get('name').hasError('pattern')"
-                      class="error"
-                    >
-                      FullName is invalid! (needs to contain two space separated
-                      words)
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Email address  -->
-              <div class="form-group m-5">
-                <div class="row">
-                  <div class="col-3">
-                    <h4
-                      class="text-dark mt-1"
-                      style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
-                    >
-                      Email address<span style="color: green">*</span>
-                    </h4>
-                  </div>
-                  <div class="col-9">
-                    <input
-                      class="form-control"
-                      type="text"
-                      name="email"
-                      placeholder="example@email.com"
-                      formControlName="email"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col offset-3">
-                    <div
-                      *ngIf="form.get('email').errors?.pattern"
-                      class="error"
-                    >
-                      Email is invalid!
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Registration Number -->
-              <div class="form-group m-5">
-                <div class="row">
-                  <div class="col-3">
-                    <h4
-                      class="text-dark mt-1"
-                      style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
-                    >
-                      Registration Number<span style="color: green">*</span>
-                    </h4>
-                  </div>
-                  <div class="col-9">
-                    <input
-                      class="form-control"
-                      type="text"
-                      name="register"
-                      placeholder="Registration No."
-                      formControlName="register"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col offset-3">
-                    <div
-                      *ngIf="form.get('register').errors as register_Error"
-                      class="error"
-                    >
-                      {{ register_Error.register }}
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Phone Html Property -->
-
-              <div class="form-group m-5">
-                <div class="row">
-                  <div class="col-3">
-                    <h4
-                      class="text-dark mt-1"
-                     style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
-                    >
-                      Phone Number<span style="color: green">*</span>
-                    </h4>
-                  </div>
-                  <div class="col-9">
-                    <input
-                      class="form-control"
-                      type="text"
-                      name="phone"
-                      placeholder="Phone No."
-                      formControlName="phone"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col offset-3">
-                    <div
-                      *ngIf="form.get('phone').errors as phone_Error"
-                      class="error"
-                    >
-                      {{ phone_Error.phone }}
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Skills -->
-              <div class="form-group m-5">
-                <div class="row">
-                  <div class="col-3">
-                    <h4
-                      class="text-dark mt-1"
-                      style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
-                    >
-                      Skills
-                    </h4>
-                  </div>
-                  <div class="col-9">
-                    <div class="input-group js-input-file d-flex">
-                      <mat-form-field class="chip-list">
-                        <mat-chip-list #chipList aria-label="Skill selection">
-                          <mat-chip
-                            *ngFor="let tag of all_tags"
-                            [selectable]="selectable"
-                            [removable]="removable"
-                            (removed)="remove(tag)"
-                          >
-                            {{ tag.name }}
-                            <mat-icon matChipRemove *ngIf="removable"
-                              >cancel</mat-icon
-                            >
-                          </mat-chip>
-                          <input
-                            placeholder="Add Skills..."
-                            [matChipInputFor]="chipList"
-                            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                            [matChipInputAddOnBlur]="addOnBlur"
-                            (matChipInputTokenEnd)="add($event)"
-                          />
-                        </mat-chip-list>
-                      </mat-form-field>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Note -->
-              <div class="form-group">
-                <div class="row">
-                  <div class="col ml-4">
-                    <h4 class="text-danger">
-                      <span style="color: black">Note:</span> All Fields are
-                      Required<span style="color: green">*</span>
-                    </h4>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Summit button -->
-
-              <div class="form-group">
-                <div class="row">
-                  <div class="col-12 text-center">
-                    <input
-                      class="btn btn-primary"
-                      type="button"
-                      value="Submit Details"
-                      [disabled]="!form.valid"
-                      (click) = onSubmit(form)
-                    />
-                    <span class="text-success ml-3"> {{ success_submit }} </span>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Form end -->
-            </form>
-          </div>
-        </div>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
