--- a/src/app/score-page/score-page.component.html
+++ b/src/app/score-page/score-page.component.html
@@ -5,7 +5,7 @@
     height: 100vh;
   "
 >
-    <div><header class="text-dark display-2 text-center"> Thanks You</header></div>
-    <div class="mt-5 text-center"><h1> Your Score for the test is {{score | json}} out of 30</h1></div>
+    <div><header class="text-dark display-2 text-center"> Thank You</header></div>
+    <div class="mt-5 text-center"><h1> Your Score for the test is {{score}} out of 30</h1></div>
 
 </div>
