--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -25,7 +25,7 @@
     class="ml-3"
     style="font-style: inherit; font-size: 30px; width: 900px; height: 450px"
   >
-    <div>{{ all_question[question_Id - 1].question }}</div>
+    <div>{{ currentQuestion.question }}</div>
     <div>
       <label class="radio-inline m-3"
         ><input
@@ -35,7 +35,7 @@
           [checked]="this.selected_ans == 1"
           value="A"
           (change)="selectEventHandler(1, $event)"
-        />{{ all_question[question_Id - 1].option_a }}</label
+        />{{ currentQuestion.option_a }}</label
       >
     </div>
     <div>
@@ -47,7 +47,7 @@
           [checked]="this.selected_ans == 2"
           value="B"
           (change)="selectEventHandler(2, $event)"
-        />{{ all_question[question_Id - 1].option_b }}</label
+        />{{ currentQuestion.option_b }}</label
       >
     </div>
     <div>
@@ -59,7 +59,7 @@
           [checked]="this.selected_ans == 3"
           value="C"
           (change)="selectEventHandler(3, $event)"
-        />{{ all_question[question_Id - 1].option_c }}</label
+        />{{ currentQuestion.option_c }}</label
       >
     </div>
     <div>
@@ -71,7 +71,7 @@
           [checked]="this.selected_ans == 4"
           value="D"
           (change)="selectEventHandler(4, $event)"
-        />{{ all_question[question_Id - 1].option_d }}</label
+        />{{ currentQuestion.option_d }}</label
       >
     </div>
     <div class="d-flex">
@@ -96,7 +96,7 @@
         <input
           class="btn btn-success"
           type="button"
-          [disabled]="question_Id == all_question.length"
+          [disabled]="question_Id == manageSerive.getQuestionLength()"
           value="Next"
           (click)="next()"
         />
